--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,9 @@ dependencies {
     // Logger
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
+
+
 }
