--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
 
     // Logger
-    compile 'com.orhanobut:logger:2.1.1'
+//    compile 'com.orhanobut:logger:2.1.1'
+
     compile 'com.android.support:cardview-v7:25.3.1'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
