--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,10 @@ dependencies {
 
     compile 'com.android.support:cardview-v7:25.3.1'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
+//    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.2'
+//    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.2'
+
+    compile 'com.stephentuso:welcome:1.4.1'
 
 
 }
