--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
     <application
         android:name=".application.DtApplication"
         android:allowBackup="true"
+        android:fullBackupContent="@null"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:fullBackupContent="@null"
         android:theme="@style/AppTheme.NoActionBar">
 
         <activity android:name=".activity.MainActivity">
@@ -32,6 +32,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MyWelcomeActivity"
+            android:theme="@style/WelcomeScreenTheme" />
 
         <service
             android:name=".service.TopActivityAService"
